--- a/ProjektApp/Views/Profile/Details.cshtml
+++ b/ProjektApp/Views/Profile/Details.cshtml
@@ -23,4 +23,10 @@
     @Model.Bio
 </p>
 
+<a asp-controller="CV"
+   asp-action="Details"
+   asp-route-profileId="@Model.ProfileId">
+    Visa CV
+</a>
+
 
