--- a/ProjektApp/Views/Account/Register.cshtml
+++ b/ProjektApp/Views/Account/Register.cshtml
@@ -10,6 +10,7 @@
                     <h3 class="text-center mb-4">Skapa konto</h3>
 
                     <form asp-action="Register" method="post" novalidate>
+                        <div asp-validation-summary="All" class="text-danger mb-3"></div>
                         <div class="mb-3">
                             <label asp-for="Email" class="form-label"></label>
                             <input asp-for="Email"
