--- a/ProjektApp/Views/Profile/MyProfile.cshtml
+++ b/ProjektApp/Views/Profile/MyProfile.cshtml
@@ -90,5 +90,45 @@
             </a>
         }
     </div>
+   
+    <hr />
+   
+    <h4 class="mb-3">Mina projekt</h4>
 
+    @if (Model.User.ProjectMembers.Any())
+    {
+        <div class="row g-3">
+            @foreach (var pm in Model.User.ProjectMembers)
+            {
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                @pm.Project.Title
+                            </h5>
+
+                            <p class="card-text text-muted">
+                                @pm.Project.Description
+                            </p>
+                        </div>
+
+                        <div class="card-footer bg-transparent border-0 text-end">
+                            <a asp-controller="Project"
+                               asp-action="Details"
+                               asp-route-id="@pm.Project.ProjectId"
+                               class="btn btn-sm btn-outline-primary">
+                                Visa projekt
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-light text-muted">
+            Du är inte med i några projekt ännu.
+        </div>
+    }
 </div>
