--- a/ProjektApp/Views/Project/Index.cshtml
+++ b/ProjektApp/Views/Project/Index.cshtml
@@ -29,6 +29,13 @@
                             Ändra
                         </a>
                     }
+
+                    <a asp-action="Details"
+                       asp-route-id="@project.ProjectId"
+                       class="btn btn-sm btn-primary">
+                        Visa projekt
+                    </a>
+
                     
                     
                     
