--- a/ProjektApp/Views/Shared/_Layout.cshtml
+++ b/ProjektApp/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">
+                            <a class="nav-link" asp-controller="Profile" asp-action="Index">
                                 Profiler
                             </a>
                         </li>
