--- a/ProjektApp/Views/Profile/Edit.cshtml
+++ b/ProjektApp/Views/Profile/Edit.cshtml
@@ -37,7 +37,10 @@
     </div>
 
 
-
+    <a asp-action="ChangePassword"
+       class="btn btn-outline-warning">
+        Ändra lösenord
+    </a>
 
 
 
