--- a/ProjektApp/Views/CV/Edit.cshtml
+++ b/ProjektApp/Views/CV/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@model EditCVViewModel
 
-<h1 class="mb-4">Redigera CV</h1>
+<h1 class="mb-4">
+    <i class="bi bi-pencil me-2"></i> Redigera CV
+    </h1>
 
 <form asp-action="Edit" method="post" class="card p-4 shadow-sm">
     <input type="hidden" asp-for="CVId" />
