--- a/ProjektApp/Views/Profile/Edit.cshtml
+++ b/ProjektApp/Views/Profile/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@model ProjektApp.Viewmodels.EditProfileViewModel
 
-<h1 class="mb-4">Redigera profil</h1>
+<h1 class="mb-4">
+    <i class="bi bi-pencil me-2"></i> Redigera profil
+</h1>
 
 <form asp-action="Edit"
       method="post"
