--- a/ProjektApp/Views/Profile/Index.cshtml
+++ b/ProjektApp/Views/Profile/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model List<Profile>
 
-<h2 class="mb-4">Profiler</h2>
+<h2 class="mb-4">
+    <i class="bi bi-people me-2"></i>Profiler
+</h2>
 
 <form method="get" class="mb-4">
     <div class="input-group">
