--- a/ProjektApp/Views/Project/Edit.cshtml
+++ b/ProjektApp/Views/Project/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@model EditProjectViewModel
 
-<h3>Redigera projekt</h3>
+<h3>
+    <i class="bi bi-pencil me-2"></i> ÄndraRedigera projekt
+    </h3>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="ProjectId" />
