--- a/ProjektApp/Views/Project/Index.cshtml
+++ b/ProjektApp/Views/Project/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@using System.Security.Claims
 @model IEnumerable<ProjectListViewModel>
 
-
+<h1 class="mb-4">
+    <i class="bi bi-folder me-2"></i>Projekt
+</h1>
 <div class="mb-2">
     <a asp-controller="Project"
        asp-action="Create"
