--- a/ProjektApp/Views/Message/Send.cshtml
+++ b/ProjektApp/Views/Message/Send.cshtml
@@ -1,6 +1,8 @@
 ﻿@model SendMessageViewModel
 
-<h3>Skicka meddelande</h3>
+<h3>
+    <i class="bi bi-envelope me-2"></i>Skicka meddelande
+    </h3>
 
 <form asp-action="Send" method="post">
     <input asp-for="ReceiverProfileId" type="hidden" />
