--- a/ProjektApp/wwwroot/css/site.css
+++ b/ProjektApp/wwwroot/css/site.css
@@ -20,3 +20,43 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+.page-title {
+    font-weight: 600;
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #dee2e6;
+    padding-bottom: .5rem;
+}
+
+/*Card/Hover*/
+
+.card-hover {
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.card-hover:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+}
+/*Message*/
+.message-item {
+    padding: 12px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    background-color: #f8f9fa;
+}
+
+    .message-item.unread {
+        border-left: 4px solid #dc3545;
+        background-color: #e9f2ff;
+        font-weight: 600;
+    }
+
+
+.stat-box {
+    background: #f1f3f5;
+    padding: 1rem;
+    border-radius: 8px;
+    text-align: center;
+}
