--- a/ProjektApp/Views/Shared/_Layout.cshtml
+++ b/ProjektApp/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
 
                             <li class="nav-item">
                                 <span class="nav-link text-muted">
-                                    Hej @User.Identity.Name
+                                    Inloggad som @User.Identity.Name
                                 </span>
                             </li>
 
